--- a/public/services/src/app/views/index/index.html
+++ b/public/services/src/app/views/index/index.html
@@ -3,11 +3,11 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<div class="sectionContent">
+	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
-	</div>
+	</a>
 	<div class="sectionFooter">
-		<span class="workDesc">求大神p</span>
+		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<div class="workCount">
 				<i class="icon-workCount"></i>
@@ -25,11 +25,11 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<div class="sectionContent">
+	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
-	</div>
+	</a>
 	<div class="sectionFooter">
-		<span class="workDesc">求大神p</span>
+		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<div class="workCount">
 				<i class="icon-workCount"></i>
@@ -41,7 +41,4 @@
 			</div>
 		</div>
 	</div>
-</div>
-<div class="indexFooter">
-	<a href="javascript:;" class="viewMore">查看更多</a>
 </div>
