--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -7,22 +7,22 @@
 		<div class="menuBg"></div>
 		<i class="icon-My"></i>
 		<ul class="menuMy-list hide">
-			<li class="menuItem clearfix">
+			<a href="/services/index/index" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
 				<span class="text-menuItem">求P大厅</span>
-			</li>
-			<li class="menuItem clearfix">
+			</a >
+			<a href="/services/myAsk/myAsk" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-ask"></i>
 				<span class="text-menuItem">我的求P</span>
-			</li>
-			<li class="menuItem clearfix">
+			</a >
+			<a href="/services/myHelp/myHelp" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-help"></i>
 				<span class="text-menuItem">我的帮P</span>
-			</li>
-			<li class="menuItem clearfix">
+			</a >
+			<a href="/services/myWork/myWork" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-work"></i>
 				<span class="text-menuItem">我的作品</span>
-			</li>
+			</a >
 		</ul>
 	</li>
 	<li class="menuPs">
