--- a/public/services/src/app/views/myHelp/myHelp.html
+++ b/public/services/src/app/views/myHelp/myHelp.html
@@ -8,21 +8,21 @@
 		<span class="userName">咩咩咩remy</span>
 	</div>
 	<div class="myHelp-pageSection">
-		<div class="sectionContent">
+		<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 			<img src="/images/origin-work.png" alt="原图">
-		</div>
+		</a>
 		<div class="sectionFooter">
-			<span class="workDesc">求大神p</span>
+			<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 			<div class="footerBottom clearfix">
 				<span class="pubdate">
 					<span class="excDate">2016-3-14</span>
 					<span class="excTiming">12:12</span>
 				</span>
 				<div class="workHandler">
-					<div class="handlerUpload clearfix">
+					<a href="/services/uploadWork/uploadWork" class="handlerUpload clearfix">
 						<i class="icon-upload"></i>
 						<span class="text-handlerUpload">上传作品</span>
-					</div>
+					</a>
 					<div class="handlerDelete clearfix">
 						<i class="icon-delete"></i>
 						<span class="text-handlerDelete">删除</span>
@@ -36,21 +36,21 @@
 		<span class="userName">咩咩咩remy</span>
 	</div>
 	<div class="myHelp-pageSection">
-		<div class="sectionContent">
+		<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 			<img src="/images/origin-work.png" alt="原图">
-		</div>
+		</a>
 		<div class="sectionFooter">
-			<span class="workDesc">求大神p</span>
+			<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 			<div class="footerBottom clearfix">
 				<span class="pubdate">
 					<span class="excDate">2016-3-14</span>
 					<span class="excTiming">12:12</span>
 				</span>
 				<div class="workHandler">
-					<div class="handlerUpload clearfix">
+					<a href="/services/uploadWork/uploadWork" class="handlerUpload clearfix">
 						<i class="icon-upload"></i>
 						<span class="text-handlerUpload">上传作品</span>
-					</div>
+					</a>
 					<div class="handlerDelete clearfix">
 						<i class="icon-delete"></i>
 						<span class="text-handlerDelete">删除</span>
