--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -108,8 +108,10 @@ body{
 			box-shadow: 0px 0.14rem 0.36rem 0px rgba(0,0,0,0.4);
 			background-color: #fff;
 			.menuItem{
+				display: block;
 				padding: 1rem 0;
 				margin-left: 1.64rem;
+				color: #000;
 				.icon-menuItem{
 					display: block;
 					float: left;
@@ -266,6 +268,7 @@ body{
 		}
 	}
 	.sectionContent{
+		display: block;
 		width: 100%;
 		max-height: 26.79rem;
 		overflow: hidden;
@@ -281,6 +284,7 @@ body{
 		.workDesc{
 			display: block;
 			font-size: 1.07rem;
+			color: #000;
 		}
 		.footerBottom{
 			.workCount{
