--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -25,8 +25,10 @@
 		border-bottom: 0.43rem solid #f7f7f7;
 		width: 100%;
 		.sectionContent{
+			display: block;
 			width: 100%;
 			img{
+				display: block;
 				width: 100%;
 			}
 		}
@@ -37,6 +39,7 @@
 			.workDesc{
 				display: block;
 				font-size: 1.07rem;
+				color: #000;
 			}
 			.footerBottom{
 				margin-top: 1.46rem;
@@ -83,8 +86,10 @@
 		width: 100%;
 		border-bottom: 0.36rem solid #F7F7F7;
 		.sectionContent{
+			display: block;
 			width: 100%;
 			img{
+				display: block;
 				width: 100%;
 			}
 		}
@@ -95,6 +100,7 @@
 			.workDesc{
 				display: block;
 				font-size: 1.07rem;
+				color: #000;
 			}
 			.footerBottom{
 				margin-top: 1.46rem;
@@ -116,7 +122,6 @@
 					color: #333333;
 					.handlerUpload{
 						float: left;
-						cursor: pointer;
 						margin-left: 1.36rem;
 						.icon-upload{
 							display: block;
