--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -24,8 +24,10 @@
 		}
 	}
 	.sectionContent{
+		display: block;
 		width: 100%;
 		img{
+			display: block;
 			width: 100%;
 		}
 	}
@@ -36,6 +38,7 @@
 		.workDesc{
 			display: block;
 			font-size: 1.07rem;
+			color: #000;
 		}
 		.footerBottom{
 			margin-top: 1.46rem;
@@ -56,6 +59,7 @@
 				float: right;
 				.like-btn{
 					float: left;
+					cursor: pointer;
 					.icon-like-btn{
 						float: left;
 						width: 1.25rem;
@@ -72,6 +76,7 @@
 				}
 				.comment-btn{
 					float: left;
+					cursor: pointer;
 					.icon-comment-btn{
 						float: left;
 						margin-left: 2.30rem;
