--- a/public/services/src/app/views/myAsk/myAsk.html
+++ b/public/services/src/app/views/myAsk/myAsk.html
@@ -4,11 +4,11 @@
 </div>
 <div class="myAsk-page">
 	<div class="myAsk-pageSection">
-		<div class="sectionContent">
+		<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 			<img src="/images/origin-work.png" alt="原图">
-		</div>
+		</a>
 		<div class="sectionFooter">
-			<span class="workDesc">求大神p</span>
+			<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 			<div class="footerBottom clearfix">
 				<span class="pubdate">
 					<span class="excDate">2016-3-14</span>
@@ -22,11 +22,11 @@
 		</div>
 	</div>
 	<div class="myAsk-pageSection">
-		<div class="sectionContent">
+		<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 			<img src="/images/origin-work.png" alt="原图">
-		</div>
+		</a>
 		<div class="sectionFooter">
-			<span class="workDesc">求大神p</span>
+			<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 			<div class="footerBottom clearfix">
 				<span class="pubdate">
 					<span class="excDate">2016-3-14</span>
