--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -3,11 +3,11 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<div class="sectionContent">
+	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
-	</div>
+	</a>
 	<div class="sectionFooter">
-		<span class="workDesc">求大神p</span>
+		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<span class="pubdate">
 				<span class="excDate">2016-3-14</span>
@@ -39,15 +39,21 @@
 		<img src="/images/origin-work.png" alt="原图">
 	</div>
 	<div class="sectionFooter">
-		<span class="workDesc">求大神p</span>
+		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a> 
 		<div class="footerBottom clearfix">
 			<span class="pubdate">
 				<span class="excDate">2016-3-14</span>
 				<span class="excTiming">12:12</span>
 			</span>
 			<div class="communicate">
-				<i class="icon-like-btn"></i>
-				<i class="icon-comment-btn"></i>
+				<div class="like-btn">
+					<i class="icon-like-btn"></i>
+					<span class="text-like-btn">33</span>
+				</div>
+				<div class="comment-btn">
+					<i class="icon-comment-btn"></i>
+					<span class="text-comment-btn">33</span>
+				</div>
 			</div>
 		</div>
 	</div>
