workDesc margin-top

--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -283,6 +283,7 @@ body{
 		box-sizing: border-box;
 		.workDesc{
 			display: block;
+			margin-top: 0.71rem;
 			font-size: 1.07rem;
 			color: #000;
 		}
