--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -38,6 +38,7 @@
 			box-sizing: border-box;
 			.workDesc{
 				display: block;
+				margin-top: 0.71rem;
 				font-size: 1.07rem;
 				color: #000;
 			}
@@ -99,6 +100,7 @@
 			box-sizing: border-box;
 			.workDesc{
 				display: block;
+				margin-top: 0.71rem;
 				font-size: 1.07rem;
 				color: #000;
 			}
