--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -37,6 +37,7 @@
 		box-sizing: border-box;
 		.workDesc{
 			display: block;
+			margin-top: 0.71rem;
 			font-size: 1.07rem;
 			color: #000;
 		}
