--- a/public/services/src/app/views/index/index.html
+++ b/public/services/src/app/views/index/index.html
@@ -1,3 +1,47 @@
+<ul class="menu">
+	<li class="menuTop hide">
+		<div class="menuBg"></div>
+		<i class="icon-top"></i>
+	</li>
+	<li class="menuMy">
+		<div class="menuBg"></div>
+		<i class="icon-My"></i>
+		<ul class="menuMy-list hide">
+			<a href="/services/index/index" class="menuItem clearfix">
+				<i class="icon-menuItem icon-menuItem-hall"></i>
+				<span class="text-menuItem">求P大厅</span>
+			</a >
+			<a href="/services/myAsk/myAsk" class="menuItem clearfix">
+				<i class="icon-menuItem icon-menuItem-ask"></i>
+				<span class="text-menuItem">我的求P</span>
+			</a >
+			<a href="/services/myHelp/myHelp" class="menuItem clearfix">
+				<i class="icon-menuItem icon-menuItem-help"></i>
+				<span class="text-menuItem">我的帮P</span>
+			</a >
+			<a href="/services/myWork/myWork" class="menuItem clearfix">
+				<i class="icon-menuItem icon-menuItem-work"></i>
+				<span class="text-menuItem">我的作品</span>
+			</a >
+		</ul>
+	</li>
+	<li class="menuPs">
+		<div class="menuBg"></div>
+		<i class="icon-Ps"></i>
+		<ul class="menuPs-list hide">
+			<li class="menuItem clearfix">
+				<a href="/services/uploadOrigin/uploadOrigin">
+					<i class="icon-menuItem icon-menuItem-ask"></i>
+					<span class="text-menuItem">求P</span>
+				</a>
+			</li>
+			<li class="menuItem clearfix">
+				<i class="icon-menuItem icon-menuItem-switch"></i>
+				<span class="text-menuItem">换一换</span>
+			</li>
+		</ul>
+	</li>
+</ul>
 <div class="index-pageSection">
 	<div class="sectionHeader clearfix">
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
