--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -1,5 +1,5 @@
-<ul class="menu">
-	<li class="menuTop hide">
+<ul class="menu" id="serveceMenu">
+	<li class="menuTop none">
 		<div class="menuBg"></div>
 		<i class="icon-top"></i>
 	</li>
@@ -26,17 +26,6 @@
 		</ul>
 	</li>
 	<li class="menuPs">
-		<div class="menuBg"></div>
-		<i class="icon-Ps"></i>
-		<ul class="menuPs-list hide">
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-ask"></i>
-				<span class="text-menuItem">求P</span>
-			</li>
-			<li class="menuItem clearfix">
-				<i class="icon-menuItem icon-menuItem-switch"></i>
-				<span class="text-menuItem">换一换</span>
-			</li>
-		</ul>
+		<a href="/services/uploadOrigin/uploadOrigin" class="icon-Ps"></a>
 	</li>
 </ul>
