--- a/public/services/src/app/views/index/index.html
+++ b/public/services/src/app/views/index/index.html
@@ -1,5 +1,5 @@
 <ul class="menu">
-	<li class="menuTop hide">
+	<li class="menuTop none">
 		<div class="menuBg"></div>
 		<i class="icon-top"></i>
 	</li>
@@ -47,11 +47,11 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
+	<a href="/services/post/post" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</a>
 	<div class="sectionFooter">
-		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
+		<a href="/services/post/post" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<div class="workCount">
 				<i class="icon-workCount"></i>
@@ -69,11 +69,11 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
+	<a href="/services/post/post" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
 	</a>
 	<div class="sectionFooter">
-		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
+		<a href="/services/post/post" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
 			<div class="workCount">
 				<i class="icon-workCount"></i>
