--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -35,9 +35,9 @@
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
 		<span class="userName">咩咩咩remy</span>
 	</div>
-	<div class="sectionContent">
+	<a href="/services/downloadOrigin/downloadOrigin" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
-	</div>
+	</a>
 	<div class="sectionFooter">
 		<a href="/services/downloadOrigin/downloadOrigin" class="workDesc">求大神p</a>
 		<div class="footerBottom clearfix">
