--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -47,7 +47,7 @@
 			</span>
 			<div class="communicate">
 				<div class="like-btn">
-					<i class="icon-like-btn"></i>
+					<i class="icon-like-btn icon-pressed-like"></i>
 					<span class="text-like-btn">33</span>
 				</div>
 				<div class="comment-btn">
@@ -67,7 +67,7 @@
 				</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
-					<span class="optionItem delete">删除</span>
+					<!-- <span class="optionItem delete">删除</span> -->
 				</div>
 			</div>
 			<span class="commentText">咩咩</span>
@@ -77,7 +77,7 @@
 				<span class="userName">空耳君：</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
-					<span class="optionItem delete">删除</span>
+					<!-- <span class="optionItem delete">删除</span> -->
 				</div>
 			</div>
 			<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
@@ -87,7 +87,7 @@
 				<span class="userName">azalea:</span>
 				<div class="commentOption">
 					<span class="optionItem reply">回复</span>
-					<span class="optionItem delete hide">删除</span>
+					<!-- <span class="optionItem delete hide">删除</span> -->
 				</div>
 			</div>
 			<span class="commentText">大神能帮我转一个吗</span>
