--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -68,6 +68,10 @@
 						background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
 						background-size: 100%;
 					}
+					.icon-pressed-like {
+						background: url(/images/like.png) no-repeat 0 0;
+						background-size: 100%;
+					}
 					.text-like-btn{
 						float: left;
 						font-size: 0.86rem;
