--- a/public/css/main.css
+++ b/public/css/main.css
@@ -177,6 +177,66 @@ body {
   color: #000;
   font-family: 'PingFangSC-Regular', 'sans-serif';
 }
+.toast-hide {
+  display: none !important;
+}
+.fix-alert {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.fix-alert .ale-kong {
+  height: 25%;
+}
+.fix-alert .ale {
+  width: 70%;
+  max-height: 10rem;
+  padding: 1.14rem 5%;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 0.36rem;
+}
+.fix-alert .ale .ale-head {
+  font-size: 1.43rem;
+  line-height: 1.43rem;
+  color: #000;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-content {
+  font-size: 1.14rem;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.64rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-button {
+  margin-top: 2.32rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-button .toast-qu {
+  display: inline-block;
+  width: 46%;
+  height: 2.5rem;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin-right: 4%;
+  color: #fff;
+  font-size: 1.07rem;
+  text-align: center;
+  line-height: 2.5rem;
+}
+.fix-alert .ale .ale-button .toast-cannel {
+  display: inline-block;
+  width: 46%;
+  height: 2.5rem;
+  background-color: #FF9211;
+  color: #fff;
+  font-size: 1.07rem;
+  text-align: center;
+  line-height: 2.5rem;
+}
 .menu {
   position: fixed;
   bottom: 7%;
@@ -825,6 +885,10 @@ body {
   width: 1.25rem;
   height: 1.11rem;
   background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
   background-size: 100%;
 }
 .post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
