--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -219,6 +219,10 @@
 							background: url(/images/icon-like.png) no-repeat 0 0;
 							background-size: 100%;
 						}
+						.icon-pressed-like {
+							background: url(/images/like.png) no-repeat 0 0;
+							background-size: 100%;
+						}
 						.text-like{
 							display: block;
 							float: left;
