--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -255,9 +255,9 @@
 	}
 	.window{
 		position: absolute;
-		top: 2.68rem;
+		top: 50%;
 		left: 50%;
-		transform: translate(-50%,0);
+		transform: translate(-50%,-50%);
 		width: 24.29rem;
 		height: 15.57rem;
 		background-color: #fff;
