--- a/public/services/src/app/views/downloadOrigin/downloadOrigin.html
+++ b/public/services/src/app/views/downloadOrigin/downloadOrigin.html
@@ -1,9 +1,9 @@
-<div class="downloadHeader" >
+<!-- <div class="downloadHeader" >
 	<div class="backPage">
 		<i class="icon-backPage"></i>
 		<span class="text-backPage">返回</span>
 	</div>
-</div>
+</div> -->
 <div class="downloadContent">
 	<img src="/images/origin-work.png" alt="原图" class="originPic">
 	<div class="downloadFooter">
