--- a/public/services/src/app/views/post/post.html
+++ b/public/services/src/app/views/post/post.html
@@ -105,13 +105,12 @@
 	</a>
 </div>
 <div class="window-fix hide" id="replyWindow">
-	<div class="windowBg"></div>
 	<div class="window clearfix">
 		<div class="windowHeader">
 			<span>回复</span>
 			<span class="replyTo">@咩美：</span>
 		</div>
-		<textarea class="windowContent"></textarea>
+		<textarea class="windowContent" autofocus="autofocus"></textarea>
 		<div class="windowOperation">
 			<input type="button" value="取消" class="cancel">
 			<input type="submit" value="发送" class="send">
@@ -119,9 +118,8 @@
 	</div>
 </div>
 <div class="window-fix hide" id="commentWindow">
-	<div class="windowBg"></div>
 	<div class="window clearfix">
-		<textarea class="windowContent" placeholder="评论"></textarea>
+		<textarea class="windowContent" placeholder="评论" autofocus="autofocus"></textarea>
 		<div class="windowOperation">
 			<input type="button" value="取消" class="cancel">
 			<input type="submit" value="发送" class="send">
