--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1059,12 +1059,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 998;
-}
-.window-fix .windowBg {
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .window-fix .window {
   position: absolute;
@@ -1351,7 +1346,7 @@ body {
   opacity: 0.8;
 }
 .downloadContent {
-  widows: 100%;
+  width: 100%;
 }
 .downloadContent .originPic {
   display: block;
