--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -7,19 +7,19 @@
 		<div class="menuBg"></div>
 		<i class="icon-My"></i>
 		<ul class="menuMy-list hide">
-			<a href="/services/index/index" class="menuItem clearfix">
+			<a href="/services/ask/index" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-hall"></i>
 				<span class="text-menuItem">求P大厅</span>
 			</a >
-			<a href="/services/myAsk/myAsk" class="menuItem clearfix">
+			<a href="/services/personal/ask" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-ask"></i>
 				<span class="text-menuItem">我的求P</span>
 			</a >
-			<a href="/services/myHelp/myHelp" class="menuItem clearfix">
+			<a href="/services/personal/reply" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-help"></i>
 				<span class="text-menuItem">我的帮P</span>
 			</a >
-			<a href="/services/myWork/myWork" class="menuItem clearfix">
+			<a href="/services/personal/work" class="menuItem clearfix">
 				<i class="icon-menuItem icon-menuItem-work"></i>
 				<span class="text-menuItem">我的作品</span>
 			</a >
