--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -308,8 +308,7 @@ body{
 	.sectionHeader{
 		width: 100%;
 		height:3.93rem;
-		border: 0.04rem solid #DDDDDD;
-		border-top: 0;
+		border-bottom: 0.04rem solid #DDDDDD;
 		background-color: #fff;
 		.userPortrait{
 			display: block;
