--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -1,8 +1,7 @@
 .sectionHeader{
 	width: 100%;
 	height:3.93rem;
-	border: 0.04rem solid #DDDDDD;
-	border-top: 0;
+	border-bottom: 0.04rem solid #DDDDDD;
 	background-color: #fff;
 	.userPortrait{
 		display: block;
