--- a/public/services/src/less/upload.less
+++ b/public/services/src/less/upload.less
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 3.93rem;
 	line-height: 3.93rem;
-	border:0.04rem solid #EDEDED;
+	border-bottom:0.04rem solid #EDEDED;
 	font-size: 0;
 	.backPage{
 		float: left;
@@ -146,7 +146,7 @@
 	width: 100%;
 	height: 3.93rem;
 	line-height: 3.93rem;
-	border:0.04rem solid #EDEDED;
+	border-bottom:0.04rem solid #EDEDED;
 	font-size: 0;
 	.backPage{
 		float: left;
