--- a/public/services/src/app/views/menu/menu.html
+++ b/public/services/src/app/views/menu/menu.html
@@ -26,6 +26,6 @@
 		</ul>
 	</li>
 	<li class="menuPs">
-		<a href="/services/uploadOrigin/uploadOrigin" class="icon-Ps"></a>
+		<a href="/services/upload/ask" class="icon-Ps"></a>
 	</li>
 </ul>
