--- a/public/services/src/app/views/upload/ask.html
+++ b/public/services/src/app/views/upload/ask.html
@@ -1,6 +1,6 @@
 <div class="uploadHeader" >
 	<div class="backPage">
-		<i class="icon-backPage"></i>
+		<!-- <i class="icon-backPage"></i> -->
 		<span class="text-backPage">发布求P</span>
 	</div>
 	<input type="button" value="发布" class="confirm">
