--- a/public/services/src/less/upload.less
+++ b/public/services/src/less/upload.less
@@ -9,7 +9,7 @@
 	width: 100%;
 	height: 3.93rem;
 	line-height: 3.93rem;
-	border:0.04rem solid #EDEDED;
+	border-bottom:0.04rem solid #EDEDED;
 	font-size: 0;
 	.backPage{
 		float: left;
@@ -22,11 +22,11 @@
 			height: 1.36rem;
 			background: url(/images/icon-backPage.png) no-repeat 0 0;
 			background-size: 100%;
+			margin-right: 0.46rem;
 		}
 		.text-backPage{
 			display: inline-block;
 			vertical-align: middle;
-			margin-left: 0.46rem;
 			font-size: 1rem;
 			font-family: "PingFangSC-Regular","sans-serif";
 			color: #000;
@@ -54,6 +54,7 @@
 	margin: 0 3%;
 	.uploadPic-none{
 		width: 100%;
+		position: relative;
 		box-sizing:border-box;
 		border-bottom: 0.04rem solid #F0F0F0;
 		height: 6.07rem;
@@ -64,6 +65,39 @@
 			float: left;
 			width: 3.93rem;
 			height: 3.93rem;
+			#fileElem {
+				position: absolute;
+				top: 0;
+				opacity: 0;
+				z-index: 1;
+				display: block;
+				width: 3.93rem;
+				height: 3.93rem;
+			}			
+			#fileList {
+				position: absolute;
+				top: 0;
+				overflow: hidden;
+				display: block;
+				width: 3.93rem;
+				height: 3.93rem;
+				img {
+					display: block;
+					width: 100%;
+				}
+			}
+			.uploadCancel{
+				position: absolute;
+				display: block;
+				z-index: 2;
+				top: -0.7rem;
+				right: -0.8rem;
+				width: 1.29rem;
+				height: 1.32rem;
+				background: url(/images/uploadCancel.png)no-repeat 0 0;
+				background-size: 100%;
+				cursor: pointer;
+			}
 			.holderBorder{
 				position: absolute;
 				z-index: 0;
@@ -139,6 +173,8 @@
 		}
 	}
 	.uploadDesc{
+		display: block;
+		width: 100%;
 		margin: 1.07rem 0;
 	}
 }
