--- a/public/services/src/app/views/personal/reply.html
+++ b/public/services/src/app/views/personal/reply.html
@@ -19,14 +19,14 @@
 					<span class="excTiming">12:12</span>
 				</span>
 				<div class="workHandler">
-					<a href="/services/uploadWork/uploadWork" class="handlerUpload clearfix">
+					<a href="/services/upload/work" class="handlerUpload clearfix">
 						<i class="icon-upload"></i>
 						<span class="text-handlerUpload">上传作品</span>
 					</a>
-					<div class="handlerDelete clearfix">
+<!-- 					<div class="handlerDelete clearfix">
 						<i class="icon-delete"></i>
 						<span class="text-handlerDelete">删除</span>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
@@ -47,14 +47,14 @@
 					<span class="excTiming">12:12</span>
 				</span>
 				<div class="workHandler">
-					<a href="/services/uploadWork/uploadWork" class="handlerUpload clearfix">
+					<a href="/services/upload/work" class="handlerUpload clearfix">
 						<i class="icon-upload"></i>
 						<span class="text-handlerUpload">上传作品</span>
 					</a>
-					<div class="handlerDelete clearfix">
+<!-- 					<div class="handlerDelete clearfix">
 						<i class="icon-delete"></i>
 						<span class="text-handlerDelete">删除</span>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</div>
