--- a/public/services/src/less/myPage.less
+++ b/public/services/src/less/myPage.less
@@ -24,8 +24,10 @@
 		border-bottom: 0.43rem solid #f7f7f7;
 		width: 100%;
 		.sectionContent{
+			overflow: hidden;
 			display: block;
 			width: 100%;
+			max-height: 26.79rem;
 			img{
 				display: block;
 				width: 100%;
