--- a/public/css/main.css
+++ b/public/css/main.css
@@ -423,8 +423,7 @@ body {
 .index-pageSection .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .index-pageSection .sectionHeader .userPortrait {
@@ -529,8 +528,7 @@ body {
 .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .sectionHeader .userPortrait {
@@ -553,8 +551,10 @@ body {
   width: 100%;
 }
 .myAsk-page .myAsk-pageSection .sectionContent {
+  overflow: hidden;
   display: block;
   width: 100%;
+  max-height: 26.79rem;
 }
 .myAsk-page .myAsk-pageSection .sectionContent img {
   display: block;
@@ -823,8 +823,7 @@ body {
 .post-workShow .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .post-workShow .sectionHeader .userPortrait {
@@ -843,8 +842,10 @@ body {
   font-size: 1rem;
 }
 .post-workShow .sectionContent {
+  overflow: hidden;
   display: block;
   width: 100%;
+  max-height: 26.79rem;
 }
 .post-workShow .sectionContent img {
   display: block;
@@ -1187,7 +1188,7 @@ body {
   width: 100%;
   height: 3.93rem;
   line-height: 3.93rem;
-  border: 0.04rem solid #EDEDED;
+  border-bottom: 0.04rem solid #EDEDED;
   font-size: 0;
 }
 .uploadHeader .backPage {
@@ -1202,11 +1203,11 @@ body {
   height: 1.36rem;
   background: url(/images/icon-backPage.png) no-repeat 0 0;
   background-size: 100%;
+  margin-right: 0.46rem;
 }
 .uploadHeader .backPage .text-backPage {
   display: inline-block;
   vertical-align: middle;
-  margin-left: 0.46rem;
   font-size: 1rem;
   font-family: "PingFangSC-Regular", "sans-serif";
   color: #000;
@@ -1233,6 +1234,7 @@ body {
 }
 .uploadContent .uploadPic-none {
   width: 100%;
+  position: relative;
   box-sizing: border-box;
   border-bottom: 0.04rem solid #F0F0F0;
   height: 6.07rem;
@@ -1244,6 +1246,39 @@ body {
   float: left;
   width: 3.93rem;
   height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  z-index: 1;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList {
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
+  display: block;
+  width: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 2;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
 }
 .uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
   position: absolute;
@@ -1318,13 +1353,15 @@ body {
   opacity: 0.2;
 }
 .uploadContent .uploadDesc {
+  display: block;
+  width: 100%;
   margin: 1.07rem 0;
 }
 .downloadHeader {
   width: 100%;
   height: 3.93rem;
   line-height: 3.93rem;
-  border: 0.04rem solid #EDEDED;
+  border-bottom: 0.04rem solid #EDEDED;
   font-size: 0;
 }
 .downloadHeader .backPage {
