--- a/public/services/src/less/post.less
+++ b/public/services/src/less/post.less
@@ -23,8 +23,10 @@
 		}
 	}
 	.sectionContent{
+		overflow: hidden;
 		display: block;
 		width: 100%;
+		max-height: 26.79rem;
 		img{
 			display: block;
 			width: 100%;
