--- a/public/css/main.css
+++ b/public/css/main.css
@@ -142,7 +142,6 @@ html {
   font-size: 1rem;
   min-width: 320px;
   color: #fff;
-  height: 100%;
 }
 #__loading {
   display: none !important;
@@ -178,9 +177,69 @@ body {
   color: #000;
   font-family: 'PingFangSC-Regular', 'sans-serif';
 }
+.toast-hide {
+  display: none !important;
+}
+.fix-alert {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.fix-alert .ale-kong {
+  height: 25%;
+}
+.fix-alert .ale {
+  width: 70%;
+  max-height: 10rem;
+  padding: 1.14rem 5%;
+  margin: 0 auto;
+  background-color: #fff;
+  border-radius: 0.36rem;
+}
+.fix-alert .ale .ale-head {
+  font-size: 1.43rem;
+  line-height: 1.43rem;
+  color: #000;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-content {
+  font-size: 1.14rem;
+  color: rgba(0, 0, 0, 0.8);
+  line-height: 1.64rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-button {
+  margin-top: 2.32rem;
+  text-align: center;
+}
+.fix-alert .ale .ale-button .toast-qu {
+  display: inline-block;
+  width: 46%;
+  height: 2.5rem;
+  background-color: rgba(0, 0, 0, 0.2);
+  margin-right: 4%;
+  color: #fff;
+  font-size: 1.07rem;
+  text-align: center;
+  line-height: 2.5rem;
+}
+.fix-alert .ale .ale-button .toast-cannel {
+  display: inline-block;
+  width: 46%;
+  height: 2.5rem;
+  background-color: #FF9211;
+  color: #fff;
+  font-size: 1.07rem;
+  text-align: center;
+  line-height: 2.5rem;
+}
 .menu {
   position: fixed;
-  bottom: 5%;
+  bottom: 7%;
   /*to be modified*/
   right: 4%;
   z-index: 980;
@@ -226,8 +285,10 @@ body {
   background-color: #fff;
 }
 .menu .menuMy .menuMy-list .menuItem {
+  display: block;
   padding: 1rem 0;
   margin-left: 1.64rem;
+  color: #000;
 }
 .menu .menuMy .menuMy-list .menuItem .icon-menuItem {
   display: block;
@@ -261,19 +322,19 @@ body {
 }
 .menu .menuPs {
   position: relative;
-  display: block;
+  /*display: block;*/
   width: 3.29rem;
   height: 3.29rem;
   margin-top: 0.93rem;
+  border: 0.08rem solid rgba(255, 255, 255, 0.9);
+  border-radius: 100%;
+  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
+  background-color: #000;
 }
 .menu .menuPs .menuBg {
   width: 100%;
   height: 100%;
   opacity: 0.89;
-  border: 0.08rem solid rgba(255, 255, 255, 0.9);
-  border-radius: 100%;
-  box-shadow: 0px 0.14rem 0.36rem 0px rgba(0, 0, 0, 0.4);
-  background-color: #000;
 }
 .menu .menuPs .icon-Ps {
   display: block;
@@ -328,7 +389,7 @@ body {
 }
 .menu .menuTop {
   position: relative;
-  display: block;
+  /*display: block;*/
   width: 3.29rem;
   height: 3.29rem;
   margin-top: 0.93rem;
@@ -362,8 +423,7 @@ body {
 .index-pageSection .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .index-pageSection .sectionHeader .userPortrait {
@@ -382,7 +442,10 @@ body {
   font-size: 1rem;
 }
 .index-pageSection .sectionContent {
+  display: block;
   width: 100%;
+  max-height: 26.79rem;
+  overflow: hidden;
 }
 .index-pageSection .sectionContent img {
   width: 100%;
@@ -395,7 +458,9 @@ body {
 }
 .index-pageSection .sectionFooter .workDesc {
   display: block;
+  margin-top: 0.71rem;
   font-size: 1.07rem;
+  color: #000;
 }
 .index-pageSection .sectionFooter .footerBottom .workCount {
   float: left;
@@ -463,8 +528,7 @@ body {
 .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .sectionHeader .userPortrait {
@@ -483,12 +547,17 @@ body {
   font-size: 1rem;
 }
 .myAsk-page .myAsk-pageSection {
+  border-bottom: 0.43rem solid #f7f7f7;
   width: 100%;
 }
 .myAsk-page .myAsk-pageSection .sectionContent {
+  overflow: hidden;
+  display: block;
   width: 100%;
+  max-height: 26.79rem;
 }
 .myAsk-page .myAsk-pageSection .sectionContent img {
+  display: block;
   width: 100%;
 }
 .myAsk-page .myAsk-pageSection .sectionFooter {
@@ -498,7 +567,9 @@ body {
 }
 .myAsk-page .myAsk-pageSection .sectionFooter .workDesc {
   display: block;
+  margin-top: 0.71rem;
   font-size: 1.07rem;
+  color: #000;
 }
 .myAsk-page .myAsk-pageSection .sectionFooter .footerBottom {
   margin-top: 1.46rem;
@@ -542,9 +613,11 @@ body {
   border-bottom: 0.36rem solid #F7F7F7;
 }
 .myHelp-page .myHelp-pageSection .sectionContent {
+  display: block;
   width: 100%;
 }
 .myHelp-page .myHelp-pageSection .sectionContent img {
+  display: block;
   width: 100%;
 }
 .myHelp-page .myHelp-pageSection .sectionFooter {
@@ -554,7 +627,9 @@ body {
 }
 .myHelp-page .myHelp-pageSection .sectionFooter .workDesc {
   display: block;
+  margin-top: 0.71rem;
   font-size: 1.07rem;
+  color: #000;
 }
 .myHelp-page .myHelp-pageSection .sectionFooter .footerBottom {
   margin-top: 1.46rem;
@@ -578,7 +653,6 @@ body {
 }
 .myHelp-page .myHelp-pageSection .sectionFooter .footerBottom .workHandler .handlerUpload {
   float: left;
-  cursor: pointer;
   margin-left: 1.36rem;
 }
 .myHelp-page .myHelp-pageSection .sectionFooter .footerBottom .workHandler .handlerUpload .icon-upload {
@@ -673,6 +747,10 @@ body {
   background: url(/images/icon-like.png) no-repeat 0 0;
   background-size: 100%;
 }
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
 .myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
   display: block;
   float: left;
@@ -745,8 +823,7 @@ body {
 .post-workShow .sectionHeader {
   width: 100%;
   height: 3.93rem;
-  border: 0.04rem solid #DDDDDD;
-  border-top: 0;
+  border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
 .post-workShow .sectionHeader .userPortrait {
@@ -765,9 +842,13 @@ body {
   font-size: 1rem;
 }
 .post-workShow .sectionContent {
+  overflow: hidden;
+  display: block;
   width: 100%;
+  max-height: 26.79rem;
 }
 .post-workShow .sectionContent img {
+  display: block;
   width: 100%;
 }
 .post-workShow .sectionFooter {
@@ -777,7 +858,9 @@ body {
 }
 .post-workShow .sectionFooter .workDesc {
   display: block;
+  margin-top: 0.71rem;
   font-size: 1.07rem;
+  color: #000;
 }
 .post-workShow .sectionFooter .footerBottom {
   margin-top: 1.46rem;
@@ -798,22 +881,44 @@ body {
 .post-workShow .sectionFooter .footerBottom .communicate {
   float: right;
 }
-.post-workShow .sectionFooter .footerBottom .communicate .icon-like-btn {
-  display: block;
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-like-btn {
   float: left;
   width: 1.25rem;
   height: 1.11rem;
   background: url(/images/icon-like-deepCol.png) no-repeat 0 0;
   background-size: 100%;
 }
-.post-workShow .sectionFooter .footerBottom .communicate .icon-comment-btn {
-  display: block;
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .icon-pressed-like {
+  background: url(/images/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .like-btn .text-like-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #656565;
+  margin-left: .5rem;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn {
+  float: left;
+  cursor: pointer;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .icon-comment-btn {
   float: left;
   margin-left: 2.30rem;
   width: 1.11rem;
   height: 1.11rem;
   background: url(/images/icon-comment-deepCol.png) no-repeat 0 0;
   background-size: 100%;
+}
+.post-workShow .sectionFooter .footerBottom .communicate .comment-btn .text-comment-btn {
+  float: left;
+  font-size: 0.86rem;
+  color: #656565;
+  margin-left: .5rem;
 }
 .post-workCount {
   width: 100%;
@@ -834,11 +939,11 @@ body {
   vertical-align: bottom;
   color: #000;
   font-family: "PingFangSC-Regular", "sans-serif";
-  font-size: 24px;
+  font-size: 0.86rem;
   opacity: 0.8;
 }
 .post-workCount .text-workCount em {
-  font-size: 30px;
+  font-size: 1.07rem;
 }
 .artWorkShow {
   border-bottom: 1.43rem solid #F7F7F7;
@@ -847,78 +952,65 @@ body {
   width: 94%;
   margin: 0 3%;
   border-top: 1px solid #eaeaea;
-  border-bottom: 1px solid #eaeaea;
 }
 .artWorkShow .commentDetail .commentLine {
-  display: block;
-  margin: 1.18rem 0 1.32rem 0;
+  padding: 0.86rem 0 0.86rem 0;
+  border-bottom: 1px solid #eaeaea;
 }
-.artWorkShow .commentDetail .commentLine .commentBlock {
+.artWorkShow .commentDetail .commentLine .commentHead .userName {
   float: left;
-}
-.artWorkShow .commentDetail .commentLine .commentBlock .userName {
-  display: inline-block;
-  vertical-align: top;
-  /*float: left;*/
-  /*max-width: 25%;*/
-  max-width: 6.29rem;
-  height: 100%;
   color: #000;
   font-size: 0.93rem;
   font-family: "PingFangSC-Regular", "sans-serif";
 }
-.artWorkShow .commentDetail .commentLine .commentBlock .commentText {
-  display: inline-block;
-  vertical-align: top;
-  /*float: left;*/
-  /*max-width: 82%;*/
-  max-width: 20.93rem;
-  font-size: 0.93rem;
-  font-family: "PingFangSC-Regular", "sans-serif";
-  opacity: 0.6;
-}
-.artWorkShow .commentDetail .commentLine .commentOption {
+.artWorkShow .commentDetail .commentLine .commentHead .commentOption {
   float: right;
 }
-.artWorkShow .commentDetail .commentLine .commentOption .optionItem {
+.artWorkShow .commentDetail .commentLine .commentHead .commentOption .optionItem {
   font-family: "PingFangSC-Light", "sans-serif";
   font-size: 0.79rem;
   cursor: pointer;
 }
-.artWorkShow .commentDetail .commentLine .commentOption .reply {
+.artWorkShow .commentDetail .commentLine .commentHead .commentOption .reply {
   color: #fe5401;
-  margin-right: 1.82rem;
-}
-.artWorkShow .commentDetail .commentLine .commentOption .delete {
-  color: #000;
-  opacity: 0.6;
   margin-right: 0.5rem;
 }
-.artWorkShow .commentDetail .commentReply .commentBlock .userNameGroup {
-  display: block;
-  float: left;
+.artWorkShow .commentDetail .commentLine .commentHead .commentOption .delete {
+  color: #000;
+  opacity: 0.6;
+  margin-left: 1.32rem;
+  margin-right: 0.5rem;
 }
-.artWorkShow .commentDetail .commentReply .commentBlock .userNameGroup .userName-reply {
+.artWorkShow .commentDetail .commentLine .commentText {
+  margin-top: 0.46rem;
   display: block;
-  float: left;
-  width: 1.86rem;
-  white-space: nowrap;
-}
-.artWorkShow .commentDetail .commentReply .commentBlock .userNameGroup em {
-  display: block;
-  float: left;
-  margin: 0 .25rem;
+  width: 100%;
   font-size: 0.93rem;
   font-family: "PingFangSC-Regular", "sans-serif";
   opacity: 0.6;
 }
-.artWorkShow .commentDetail .commentReply .commentBlock .userNameGroup .userName-beReplied {
-  display: block;
+.artWorkShow .commentDetail .commentReply {
+  padding-top: 1.14rem;
+}
+.artWorkShow .commentDetail .commentReply .userNameGroup {
+  float: left;
+  line-height: 1.43rem;
+  font-size: 0.93rem;
+}
+.artWorkShow .commentDetail .commentReply .userNameGroup .userName-reply {
+  float: left;
+  width: 1.86rem;
+  white-space: nowrap;
+}
+.artWorkShow .commentDetail .commentReply .userNameGroup em {
+  float: left;
+  margin: 0 .25rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  opacity: 0.6;
+}
+.artWorkShow .commentDetail .commentReply .userNameGroup .userName-beReplied {
   float: left;
   width: 3.71rem;
-}
-.artWorkShow .commentDetail .commentReply .commentBlock .commentText {
-  width: 17rem;
 }
 .artWorkShow .viewMore {
   display: block;
@@ -931,6 +1023,9 @@ body {
   margin: 0.89rem auto 0.89rem auto;
 }
 .post-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
   width: 100%;
   box-shadow: 0 -0.05rem 0.16rem 0.16rem rgba(238, 238, 238, 0.5);
   text-align: center;
@@ -969,18 +1064,13 @@ body {
   width: 100%;
   height: 100%;
   z-index: 998;
-}
-.window-fix .windowBg {
-  width: 100%;
-  height: 100%;
-  background-color: #000;
-  opacity: 0.5;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .window-fix .window {
   position: absolute;
-  top: 2.68rem;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 0);
+  transform: translate(-50%, -50%);
   width: 24.29rem;
   height: 15.57rem;
   background-color: #fff;
@@ -1046,6 +1136,48 @@ body {
   padding: 0.79rem 0.79rem;
   color: #5F5F5F;
 }
+.deleteComment-fix {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.8;
+}
+.deleteComment-fix .deleteComment {
+  position: absolute;
+  top: 16.64rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 20rem;
+  height: 10.71rem;
+  box-sizing: border-box;
+  padding: 1.07rem 1.43rem;
+  background-color: #fff;
+  border: 1px solid #979797;
+  border-radius: 0.36rem;
+}
+.deleteComment-fix .deleteComment .alertText {
+  font-family: "PingFangSC-Regular", "sans-serif";
+  font-size: 1.29rem;
+  color: #000;
+}
+.deleteComment-fix .deleteComment .deleteOperation {
+  position: absolute;
+  bottom: 1.07rem;
+  right: 1.43rem;
+  font-size: 1.07rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+}
+.deleteComment-fix .deleteComment .deleteOperation .cancelDelete {
+  color: #000;
+  opacity: 0.6;
+}
+.deleteComment-fix .deleteComment .deleteOperation .confirmDelete {
+  margin-left: 2.57rem;
+  color: #fe5401;
+}
 
 #uploadNone .confirm {
   background-color: #d8d8d8;
@@ -1056,7 +1188,7 @@ body {
   width: 100%;
   height: 3.93rem;
   line-height: 3.93rem;
-  border: 0.04rem solid #EDEDED;
+  border-bottom: 0.04rem solid #EDEDED;
   font-size: 0;
 }
 .uploadHeader .backPage {
@@ -1071,11 +1203,11 @@ body {
   height: 1.36rem;
   background: url(/images/icon-backPage.png) no-repeat 0 0;
   background-size: 100%;
+  margin-right: 0.46rem;
 }
 .uploadHeader .backPage .text-backPage {
   display: inline-block;
   vertical-align: middle;
-  margin-left: 0.46rem;
   font-size: 1rem;
   font-family: "PingFangSC-Regular", "sans-serif";
   color: #000;
@@ -1102,6 +1234,7 @@ body {
 }
 .uploadContent .uploadPic-none {
   width: 100%;
+  position: relative;
   box-sizing: border-box;
   border-bottom: 0.04rem solid #F0F0F0;
   height: 6.07rem;
@@ -1113,6 +1246,39 @@ body {
   float: left;
   width: 3.93rem;
   height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileElem {
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  z-index: 1;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList {
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  display: block;
+  width: 3.93rem;
+  height: 3.93rem;
+}
+.uploadContent .uploadPic-none .picPlaceHolder #fileList img {
+  display: block;
+  width: 100%;
+}
+.uploadContent .uploadPic-none .picPlaceHolder .uploadCancel {
+  position: absolute;
+  display: block;
+  z-index: 2;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
+  background-size: 100%;
+  cursor: pointer;
 }
 .uploadContent .uploadPic-none .picPlaceHolder .holderBorder {
   position: absolute;
@@ -1148,32 +1314,36 @@ body {
   height: 6.07rem;
   line-height: 6.07rem;
 }
-.uploadContent .uploadPic .picPlaceHolder {
+.uploadContent .uploadPic .uploadThumb {
   margin-top: 1.07rem;
   position: relative;
   float: left;
   width: 3.93rem;
   height: 3.93rem;
 }
-.uploadContent .uploadPic .picPlaceHolder .holderBorder {
+.uploadContent .uploadPic .uploadThumb .uploadCancel {
   position: absolute;
-  z-index: 0;
-  top: 0rem;
-  left: 0rem;
-  width: 3.93rem;
-  height: 3.93rem;
-  background: url(/images/holderBorder.png) no-repeat 0 0;
+  display: block;
+  z-index: 1;
+  top: -0.7rem;
+  right: -0.8rem;
+  width: 1.29rem;
+  height: 1.32rem;
+  background: url(/images/uploadCancel.png) no-repeat 0 0;
   background-size: 100%;
+  cursor: pointer;
 }
-.uploadContent .uploadPic .picPlaceHolder .holderMain {
+.uploadContent .uploadPic .uploadThumb .thumb {
   position: absolute;
+  border-radius: 0.21rem;
+  overflow: hidden;
   top: 45%;
   left: 54%;
   transform: translate(-50%, -50%);
-  z-index: 1;
-  width: 2.21rem;
-  height: 2.25rem;
-  background: url(/images/holderMain.png) no-repeat 0 0;
+  z-index: 0;
+  width: 3.93rem;
+  height: 3.93rem;
+  background: url(/images/origin-work.png) no-repeat 0 0;
   background-size: 100%;
 }
 .uploadContent .uploadPic .uploadText {
@@ -1183,5 +1353,72 @@ body {
   opacity: 0.2;
 }
 .uploadContent .uploadDesc {
+  display: block;
+  width: 100%;
   margin: 1.07rem 0;
+}
+.downloadHeader {
+  width: 100%;
+  height: 3.93rem;
+  line-height: 3.93rem;
+  border-bottom: 0.04rem solid #EDEDED;
+  font-size: 0;
+}
+.downloadHeader .backPage {
+  float: left;
+  margin-left: 0.82rem;
+  cursor: pointer;
+}
+.downloadHeader .backPage .icon-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0.75rem;
+  height: 1.36rem;
+  background: url(/images/icon-backPage.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.downloadHeader .backPage .text-backPage {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 0.46rem;
+  font-size: 1rem;
+  font-family: "PingFangSC-Regular", "sans-serif";
+  color: #000;
+  opacity: 0.8;
+}
+.downloadContent {
+  width: 100%;
+  padding-top: 3rem;
+}
+.downloadContent .originPic {
+  display: block;
+  width: 100%;
+}
+.downloadContent .downloadFooter {
+  padding: 1.14rem 0;
+}
+.downloadContent .downloadFooter .downloadBtn {
+  font-size: 0;
+  display: block;
+  margin: 0 auto;
+  width: 8.71rem;
+  height: 2.36rem;
+  line-height: 2.36rem;
+  text-align: center;
+  color: #332D00;
+  border-radius: 1.21rem;
+  box-shadow: 0 0.07rem 0.36rem 0 rgba(255, 225, 9, 0.7);
+  background-color: #ffe400;
+}
+.downloadContent .downloadFooter .downloadBtn .icon-download {
+  display: inline-block;
+  vertical-align: middle;
+  width: 0.82rem;
+  height: 0.86rem;
+  background: url(/images/icon-download.png) no-repeat 0 0;
+  background-size: contain;
+}
+.downloadContent .downloadFooter .downloadBtn .text-download {
+  font-size: 0.93rem;
+  vertical-align: middle;
 }
