--- a/public/services/src/app/views/personal/ask/ask.html
+++ b/public/services/src/app/views/personal/ask/ask.html
@@ -1,49 +1,49 @@
-<div class="sectionHeader clearfix">
-	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-	<span class="userName">我的求P</span>
+<div class="header-logo"></div>
+<div class="header-portrait">
+	<div class="user-info">
+		<div class="portrait">
+			<img src="/img/portrait.png" alt="用户头像">
+		</div>
+		<span class="nickname">卡拉马子</span>
+	</div>
 </div>
-<div class="myAsk-page">
-	<div class="myAsk-pageSection">
-		<a href="/services/download/index" class="sectionContent">
-			<img src="/images/origin-work.png" alt="原图">
-		</a>
-		<div class="sectionFooter">
-			<a href="/services/download/index" class="workDesc">求大神p</a>
-			<div class="footerBottom clearfix">
-				<span class="pubdate">
-					<span class="excDate">2016-3-14</span>
-					<span class="excTiming">12:12</span>
-				</span>
-				<div class="workCount">
-					<i class="icon-workCount"></i>
-					<span class="text-workCount">0作品</span>
+<ul class="header-nav clearfix">
+	<li class="nav-item"><a href="javascript:;">我的求P</a></li>
+	<li class="nav-item"><a href="javascript:;">进行中</a></li>
+	<li class="nav-item active"><a href="javascript:;">我的作品</a></li>
+</ul>
+<div class="main-ask">
+	<div class="main-ask-section grid clearfix">
+		<div class="ask-section grid-item">
+			<a href="/services/ask/detail" class="ask-section-main">
+				<img src="/img/work.png" alt="作品" class="workPic">
+				<span class="desc">描述描述</span>
+			</a>
+			<div class="ask-section-bottom clearfix">
+				<div class="help">
+					<i class="icon-help"></i>
+					<span class="text-help">23帮P</span>
+				</div>
+				<div class="work">
+					<i class="icon-work"></i>
+					<span class="text-work">66作品</span>
+				</div>
+			</div>
+		</div>
+		<div class="ask-section grid-item">
+			<a href="/services/ask/detail" class="ask-section-main">
+				<img src="/img/work2.png" alt="作品" class="workPic">
+				<span class="desc">描述描述</span>
+			</a>
+			<div class="ask-section-bottom clearfix">
+				<div class="help">
+					<i class="icon-help"></i>
+					<span class="text-help">23帮P</span>
+				</div>
+				<div class="work">
+					<i class="icon-work"></i>
+					<span class="text-work">66作品</span>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="myAsk-pageSection">
-		<a href="/services/download/index" class="sectionContent">
-			<img src="/images/origin-work.png" alt="原图">
-		</a>
-		<div class="sectionFooter">
-			<a href="/services/download/index" class="workDesc">求大神p</a>
-			<div class="footerBottom clearfix">
-				<span class="pubdate">
-					<span class="excDate">2016-3-14</span>
-					<span class="excTiming">12:12</span>
-				</span>
-				<div class="workCount">
-					<i class="icon-workCount"></i>
-					<span class="text-workCount">0作品</span>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="my-none hide" id="myHelp-none">
-	<div class="none-bg"></div>
-	<div class="emptyZone">
-		<i class="icon-empty"></i>
-		<span class="text-empty">还没有发布过求P</span>
-	</div>
-</div>
