--- a/public/services/src/app/views/personal/ask/personal-ask.less
+++ b/public/services/src/app/views/personal/ask/personal-ask.less
@@ -1,85 +1,129 @@
-.sectionHeader{
-	width: 100%;
-	height:3.93rem;
-	border-bottom: 0.04rem solid #DDDDDD;
-	background-color: #fff;
-	.userPortrait{
-		display: block;
-		float: left;
-		height: 1.79rem;
-		width: 1.79rem;
-		margin-left: 3%;
-		margin-top: 4%
-	}
-	.userName{
-		display: block;
-		float: left;
-		margin-left: 0.36rem;
-		margin-top: 5%;
-		font-size: 1rem;
-	}
+.header-logo{
+    width: 100%;
+    height: 3.57rem;
+    background-color: #fff;
 }
-.myAsk-page{
-	.myAsk-pageSection{
-		border-bottom: 0.43rem solid #f7f7f7;
-		width: 100%;
-		.sectionContent{
-			overflow: hidden;
-			display: block;
-			width: 100%;
-			max-height: 26.79rem;
-			img{
-				display: block;
-				width: 100%;
-			}
-		}
-		.sectionFooter{
-			width: 100%;
-			padding:0 3%;
-			box-sizing: border-box;
-			.workDesc{
-				display: block;
-				margin-top: 0.71rem;
-				font-size: 1.07rem;
-				color: #000;
-			}
-			.footerBottom{
-				margin-top: 1.46rem;
-				margin-bottom: 1.25rem;
-				.pubdate{
-					display: block;
-					float: left;
-					margin-right: 0.86rem;
-					color: #000;
-					opacity: 0.3;
-					font-size: 0.86rem;
-					.excTiming{
-						margin-left: 0.29rem;
-					}
-				}
-				.workCount{
-					display: block;
-					float: left;
-					.icon-workCount{
-						display: block;
-						float: left;
-						width: 0.93rem;
-						height: 0.86rem;
-						background: url(/images/icon-workCount-deepCol.png) no-repeat 0 0;
-						background-size: 100%;
-					}
-					.text-workCount{
-						display: block;
-						float: left;
-						margin-left: 0.43rem;
-						height: 0.86rem;
-						line-height: 0.86rem;
-						font-size: 0.86rem;
-						color: #7f7f7f;
-						letter-spacing: .1rem;
-					}
-				}
-			}
-		}
-	}
+.header-portrait{
+    width: 100%;
+    height: 9.32rem;
+    padding-top: 1.93rem;
+    box-sizing: border-box;
+    background-color: #ffed4f;
+    .user-info{
+        width: 4.29rem;
+        margin: 0 auto;
+        text-align: center;
+        .portrait{
+            margin:0 auto;
+            margin-bottom: 0.68rem;
+            width: 3.71rem;
+            height: 3.71rem;
+            border-radius: 100%;
+            overflow: hidden;
+            img{
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .nickname{
+            font-size: 1.07rem;
+            color: rgba(0,0,0,0.8);
+        }
+    }
+}
+.header-nav{
+    display: block;
+    width: 100%;
+    height: 2.71rem;
+    background-color: #fff;
+    display: flex;
+    .nav-item{
+        flex:1;
+        width: 3.93rem;
+        text-align: center;
+        line-height: 2.71rem;
+        font-size: 0.86rem;
+        color: rgba(0,0,0,0.49);
+        a{
+            display:inline-block;
+            width: 3.93rem;
+        }
+    }
+    .active{
+        a{
+            font-size: 0.86rem;
+            color: rgba(0,0,0,0.8);
+            border-bottom: 0.14rem solid #ffed4f;
+        }
+    }
+}
+.main-ask{
+    .main-ask-section{
+        width: 100%;
+        background-color: #f7f7f7;
+        .ask-section{
+            float: left;
+            width: 47%;
+            margin: 1.5%;
+            background-color: #fff;
+            border-radius: 0.21rem;
+            box-shadow: 0 0.04rem  0 #e2e2e2;
+            .ask-section-main{
+                .workPic{
+                    width: 100%;
+                }
+                .desc{
+                    display: block;
+                    width: 100%;
+                    height: 2.86rem;
+                    box-sizing:border-box;
+                    padding: 0.71rem 0 0 0.43rem;
+                    font-size: 0.71rem;
+                    color: rgba(0,0,0,0.8);
+                    border-bottom: 0.12rem dotted rgba(0,0,0,0.49);
+                }
+            }
+            .ask-section-bottom{
+                width: 100%;
+                height: 2.5rem;
+                box-sizing:border-box;
+                padding: 0.64rem 0.64rem 0 0.75rem;
+                border-radius: 0.18rem;
+                overflow: hidden;
+                .help{
+                    float: left;
+                    .icon-help{
+                        float: left;
+                        margin-right: 0.68rem;
+                        width: 0.93rem;
+                        height: 0.89rem;
+                        background:url(/img/icon-help.png)no-repeat 0 0;
+                        background-size: 100%;
+                    }
+                    .text-help{
+                        float: left;
+                        font-size: 0.71rem;
+                        color: rgba(0,0,0,0.49);
+                    }
+                }
+                .work{
+                    float: right;
+                    .icon-work{
+                        float: left;
+                        margin-right: 0.68rem;
+                        width: 0.93rem;
+                        height: 0.89rem;
+                        background:url(/img/icon-work.png)no-repeat 0 0;
+                        background-size: 100%;
+                    }
+                    .text-work{
+                        float: left;
+                        font-size: 0.71rem;
+                        color: rgba(0,0,0,0.49);
+                    }
+                }
+            }
+        }
+    }
 }
