--- a/public/services/src/app/views/personal/reply/personal-reply.less
+++ b/public/services/src/app/views/personal/reply/personal-reply.less
@@ -1,105 +1,74 @@
-.sectionHeader{
-	width: 100%;
-	height:3.93rem;
-	border-bottom: 0.04rem solid #DDDDDD;
-	background-color: #fff;
-	.userPortrait{
-		display: block;
-		float: left;
-		height: 1.79rem;
-		width: 1.79rem;
-		margin-left: 3%;
-		margin-top: 4%
-	}
-	.userName{
-		display: block;
-		float: left;
-		margin-left: 0.36rem;
-		margin-top: 5%;
-		font-size: 1rem;
-	}
-}
-.myHelp-page{
-	.myHelp-pageSection{
-		width: 100%;
-		border-bottom: 0.36rem solid #F7F7F7;
-		.sectionContent{
-			display: block;
-			width: 100%;
-			img{
-				display: block;
-				width: 100%;
-			}
-		}
-		.sectionFooter{
-			width: 100%;
-			padding:0 3%;
-			box-sizing: border-box;
-			.workDesc{
-				display: block;
-				margin-top: 0.71rem;
-				font-size: 1.07rem;
-				color: #000;
-			}
-			.footerBottom{
-				margin-top: 1.46rem;
-				margin-bottom: 1.25rem;
-				margin-right: 0.91rem;
-				.pubdate{
-					display: block;
-					float: left;
-					margin-right: 0.86rem;
-					color: #000;
-					opacity: 0.3;
-					font-size: 0.86rem;
-					.excTiming{
-						margin-left: 0.29rem;
-					}
-				}
-				.workHandler{
-					float: right;
-					color: #333333;
-					.handlerUpload{
-						float: left;
-						margin-left: 1.36rem;
-						.icon-upload{
-							display: block;
-							float: left;
-							width: 0.82rem;
-							height: 0.93rem;
-							margin-top: .15rem;
-							margin-right: 0.25rem;
-							background: url(/images/icon-upload.png)no-repeat 0 0;
-							background-size: 100%;
-						}
-						.text-handlerUpload{
-							display: block;
-							float: left;
-							font-size: 0.82rem;
-						}
-					}
-					.handlerDelete{
-						float: left;
-						cursor: pointer;
-						margin-left: 1.36rem;
-						.icon-delete{
-							display: block;
-							float: left;
-							width: 0.64rem;
-							height: 0.93rem;
-							margin-top: .15rem;
-							margin-right: 0.25rem;
-							background: url(/images/icon-delete.png)no-repeat 0 0;
-							background-size: 100%;
-						}
-						.text-handlerDelete{
-							display: block;
-							float: left;
-							font-size: 0.82rem;
-						}
-					}
-				}
-			}
-		}
-	}
+.myWork-page{
+    .myWork-pageSection{
+        width: 100%;
+        background-color: #f7f7f7;
+        .workSection{
+            float: left;
+            width: 47%;
+            margin: 1.5%;
+            .workPic{
+                width: 100%;
+            }
+            .workSectionFooter{
+                background-color: #fff;
+                .footerWrapper{
+                    float: right;
+                    padding: 1rem 0;
+                    .like{
+                        float: left;
+                        line-height: 0.89rem;
+                        margin-left: 0.93rem;
+                        cursor: pointer;
+                        .icon-like{
+                            display: block;
+                            float: left;
+                            width: 0.86rem;
+                            height: 0.89rem;
+                            background: url(/img/icon-like.png) no-repeat 0 0;
+                            background-size: 100%;
+                        }
+                        .icon-pressed-like {
+                            background: url(/img/like.png) no-repeat 0 0;
+                            background-size: 100%;
+                        }
+                        .text-like{
+                            display: block;
+                            float: left;
+                            height: 0.89rem;
+                            margin-left: 0.21rem;
+                            font-size: 0.71rem;
+                            font-family: "Helvetica-Light","sans-serif";
+                            color: #000;
+                            opacity: 0.3;
+                        }
+                    }
+                    .comment{
+                        float: left;
+                        line-height: 0.89rem;
+                        margin-left: 0.93rem;
+                        cursor: pointer;
+                        .icon-comment{
+                            display: block;
+                            float: left;
+                            width: 1rem;
+                            height: 0.89rem;
+                            background: url(/img/icon-comment.png) no-repeat 0 0;
+                            background-size: 100%;
+                        }
+                        .text-comment{
+                            display: block;
+                            float: left;
+                            height: 0.89rem;
+                            margin-left: 0.21rem;
+                            margin-right: 0.25rem;
+                            font-size: 0.71rem;
+                            font-family: "Helvetica-Light","sans-serif";
+                            color: #000;
+                            opacity: 0.3;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
