--- a/public/services/src/app/views/personal/reply/reply.html
+++ b/public/services/src/app/views/personal/reply/reply.html
@@ -1,70 +1,49 @@
-<div class="sectionHeader clearfix">
-	<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-	<span class="userName">我的帮P</span>
-</div>
-<div class="myHelp-page">
-	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
-	</div>
-	<div class="myHelp-pageSection">
-		<a href="/services/download/index" class="sectionContent">
-			<img src="/images/origin-work.png" alt="原图">
-		</a>
-		<div class="sectionFooter">
-			<a href="/services/download/index" class="workDesc">求大神p</a>
-			<div class="footerBottom clearfix">
-				<span class="pubdate">
-					<span class="excDate">2016-3-14</span>
-					<span class="excTiming">12:12</span>
-				</span>
-				<div class="workHandler">
-					<a href="/services/upload/work" class="handlerUpload clearfix">
-						<i class="icon-upload"></i>
-						<span class="text-handlerUpload">上传作品</span>
-					</a>
-<!-- 					<div class="handlerDelete clearfix">
-						<i class="icon-delete"></i>
-						<span class="text-handlerDelete">删除</span>
-					</div> -->
-				</div>
-			</div>
+<div class="header-logo"></div>
+<div class="header-portrait">
+	<div class="user-info">
+		<div class="portrait">
+			<img src="/img/portrait.png" alt="用户头像">
 		</div>
-	</div>
-	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
-	</div>
-	<div class="myHelp-pageSection">
-		<a href="/services/download/index" class="sectionContent">
-			<img src="/images/origin-work.png" alt="原图">
-		</a>
-		<div class="sectionFooter">
-			<a href="/services/download/index" class="workDesc">求大神p</a>
-			<div class="footerBottom clearfix">
-				<span class="pubdate">
-					<span class="excDate">2016-3-14</span>
-					<span class="excTiming">12:12</span>
-				</span>
-				<div class="workHandler">
-					<a href="/services/upload/work" class="handlerUpload clearfix">
-						<i class="icon-upload"></i>
-						<span class="text-handlerUpload">上传作品</span>
-					</a>
-<!-- 					<div class="handlerDelete clearfix">
-						<i class="icon-delete"></i>
-						<span class="text-handlerDelete">删除</span>
-					</div> -->
-				</div>
-			</div>
-		</div>
+		<span class="nickname">卡拉马子</span>
 	</div>
 </div>
-<div class="my-none hide" id="myHelp-none">
-	<div class="none-bg"></div>
-	<div class="emptyZone">
-		<i class="icon-empty"></i>
-		<span class="text-empty">还没有发布过求P</span>
+<ul class="header-nav clearfix">
+	<li class="nav-item"><a href="javascript:;">我的求P</a></li>
+	<li class="nav-item"><a href="javascript:;">进行中</a></li>
+	<li class="nav-item active"><a href="javascript:;">我的作品</a></li>
+</ul>
+<div class="myWork-page">
+	<div class="myWork-pageSection grid clearfix">
+		<a href="/services/ask/detail" class="workSection grid-item">
+			<img src="/img/work.png" alt="作品" class="workPic">
+			<div class="workSectionFooter clearfix">
+				<div class="footerWrapper">
+					<div class="like">
+						<i class="icon-like"></i>
+						<span class="text-like">26</span>
+					</div>
+					<div class="comment">
+						<i class="icon-comment"></i>
+						<span class="text-comment">80</span>
+					</div>
+				</div>
+			</div>
+		</a>
+		<a href="/services/ask/detail" class="workSection grid-item">
+			<img src="/img/work2.png" alt="作品" class="workPic">
+			<div class="workSectionFooter clearfix">
+				<div class="footerWrapper">
+					<div class="like">
+						<i class="icon-like"></i>
+						<span class="text-like">26</span>
+					</div>
+					<div class="comment">
+						<i class="icon-comment"></i>
+						<span class="text-comment">80</span>
+					</div>
+				</div>
+			</div>
+		</a>
+		</a>
 	</div>
-	<a href="javascript:;" class="linkToHall">去求P大厅看看</a>
 </div>
