--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -1,7 +1,7 @@
 <div class="post-workShow">
 	<div class="sectionHeader clearfix">
 		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
+		<span class="userName"><%= 1  %></span>
 	</div>
 	<a href="/services/download/index" class="sectionContent">
 		<img src="/images/origin-work.png" alt="原图">
