--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -31,13 +31,18 @@
 		height:3.93rem;
 		border-bottom: 0.04rem solid #DDDDDD;
 		background-color: #fff;
-		.userPortrait{
-			display: block;
+		.avatar {
 			float: left;
 			height: 1.79rem;
 			width: 1.79rem;
 			margin-left: 3%;
-			margin-top: 4%
+			margin-top: 4%;
+			border-radius: 50%;
+			overflow: hidden;
+		}
+		.userPortrait{
+			display: block;
+			width: 100%;
 		}
 		.userName{
 			display: block;
