--- a/public/css/main.css
+++ b/public/css/main.css
@@ -675,13 +675,18 @@ body {
   border-bottom: 0.04rem solid #DDDDDD;
   background-color: #fff;
 }
-.post-workShow .sectionHeader .userPortrait {
-  display: block;
+.post-workShow .sectionHeader .avatar {
   float: left;
   height: 1.79rem;
   width: 1.79rem;
   margin-left: 3%;
   margin-top: 4%;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.post-workShow .sectionHeader .userPortrait {
+  display: block;
+  width: 100%;
 }
 .post-workShow .sectionHeader .userName {
   display: block;
@@ -1113,6 +1118,79 @@ body {
   color: rgba(0, 0, 0, 0.49);
 }
 
+.myWork-page .myWork-pageSection {
+  width: 100%;
+  background-color: #f7f7f7;
+}
+.myWork-page .myWork-pageSection .workSection {
+  float: left;
+  width: 47%;
+  margin: 1.5%;
+}
+.myWork-page .myWork-pageSection .workSection .workPic {
+  width: 100%;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter {
+  background-color: #fff;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper {
+  float: right;
+  padding: 1rem 0;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
+  display: block;
+  float: left;
+  width: 0.86rem;
+  height: 0.89rem;
+  background: url(/img/icon-like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
+  background: url(/img/like.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment {
+  float: left;
+  line-height: 0.89rem;
+  margin-left: 0.93rem;
+  cursor: pointer;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
+  display: block;
+  float: left;
+  width: 1rem;
+  height: 0.89rem;
+  background: url(/img/icon-comment.png) no-repeat 0 0;
+  background-size: 100%;
+}
+.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
+  display: block;
+  float: left;
+  height: 0.89rem;
+  margin-left: 0.21rem;
+  margin-right: 0.25rem;
+  font-size: 0.71rem;
+  font-family: "Helvetica-Light", "sans-serif";
+  color: #000;
+  opacity: 0.3;
+}
+
 .main-processing {
   width: 100%;
   background-color: #f7f7f7;
@@ -1235,79 +1313,6 @@ body {
   line-height: 0.71rem;
   font-size: 0.7rem;
   color: rgba(0, 0, 0, 0.3);
-}
-
-.myWork-page .myWork-pageSection {
-  width: 100%;
-  background-color: #f7f7f7;
-}
-.myWork-page .myWork-pageSection .workSection {
-  float: left;
-  width: 47%;
-  margin: 1.5%;
-}
-.myWork-page .myWork-pageSection .workSection .workPic {
-  width: 100%;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter {
-  background-color: #fff;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper {
-  float: right;
-  padding: 1rem 0;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like {
-  float: left;
-  line-height: 0.89rem;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-like {
-  display: block;
-  float: left;
-  width: 0.86rem;
-  height: 0.89rem;
-  background: url(/img/icon-like.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .icon-pressed-like {
-  background: url(/img/like.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .like .text-like {
-  display: block;
-  float: left;
-  height: 0.89rem;
-  margin-left: 0.21rem;
-  font-size: 0.71rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment {
-  float: left;
-  line-height: 0.89rem;
-  margin-left: 0.93rem;
-  cursor: pointer;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .icon-comment {
-  display: block;
-  float: left;
-  width: 1rem;
-  height: 0.89rem;
-  background: url(/img/icon-comment.png) no-repeat 0 0;
-  background-size: 100%;
-}
-.myWork-page .myWork-pageSection .workSection .workSectionFooter .footerWrapper .comment .text-comment {
-  display: block;
-  float: left;
-  height: 0.89rem;
-  margin-left: 0.21rem;
-  margin-right: 0.25rem;
-  font-size: 0.71rem;
-  font-family: "Helvetica-Light", "sans-serif";
-  color: #000;
-  opacity: 0.3;
 }
 
 
