--- a/public/services/src/app/views/ask/detail/detail.html
+++ b/public/services/src/app/views/ask/detail/detail.html
@@ -1,13 +1,17 @@
 <div class="post-workShow">
 	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName"><%= 1  %></span>
+		<span class="avatar">
+			<img src="<%= ask.avatar %>" alt="用户头像" class="userPortrait">
+		</span>
+		<span class="userName"><%= ask.nickname %></span>
 	</div>
+	<% _.each(ask.ask_uploads, function(ask_uploads) { %>
 	<a href="/services/download/index" class="sectionContent">
-		<img src="/images/origin-work.png" alt="原图">
+		<img src="<%= ask_uploads.image_url %>" alt="原图">
 	</a>
+	<% }) %>
 	<div class="sectionFooter">
-		<a href="/services/download/index" class="workDesc">求大神p</a>
+		<a href="/services/download/index" class="workDesc"><%= ask.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="pubdate">
 				<span class="excDate">2016-3-14</span>
@@ -16,11 +20,11 @@
 			<div class="communicate">
 				<div class="like-btn">
 					<i class="icon-like-btn"></i>
-					<span class="text-like-btn">33</span>
+					<span class="text-like-btn"><%= ask.love_count %></span>
 				</div>
 				<div class="comment-btn">
 					<i class="icon-comment-btn"></i>
-					<span class="text-comment-btn">33</span>
+					<span class="text-comment-btn"><%= ask.comment_count %></span>
 				</div>
 			</div>
 		</div>
@@ -29,83 +33,23 @@
 
 <div class="post-workCount">
 	<div class="workCount-bg"></div>
-	<span class="text-workCount"><em>-</em>1 个作品<em>-</em></span>
+	<span class="text-workCount"><em>-</em><%= ask.reply_count %> 个作品<em>-</em></span>
 </div>
+
+<% _.each(replies, function(replies) { %>
 
 <div class="post-workShow artWorkShow">
 	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
+		<span class="avatar">
+			<img src="<%= replies.avatar %>" alt="用户头像" class="userPortrait">
+		</span>
+		<span class="userName"><%= replies.nickname %></span>
 	</div>
 	<a href="/services/download/index" class="sectionContent">
-		<img src="/images/origin-work.png" alt="原图">
+		<img src="<%= replies.image_url %>" alt="原图">
 	</a>
 	<div class="sectionFooter">
-		<a href="/services/download/index" class="workDesc">求大神p</a>
-		<div class="footerBottom clearfix">
-			<span class="pubdate">
-				<span class="excDate">2016-3-14</span>
-				<span class="excTiming">12:12</span>
-			</span>
-			<div class="communicate">
-				<div class="like-btn">
-					<i class="icon-like-btn icon-pressed-like"></i>
-					<span class="text-like-btn">33</span>
-				</div>
-				<div class="comment-btn">
-					<i class="icon-comment-btn"></i>
-					<span class="text-comment-btn">33</span>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="commentDetail">
-		<div class="commentLine commentReply">
-			<div class="commentHead clearfix">
-				<span class="userNameGroup">
-					<span class="userName-reply">咩咩</span>
-					<em>回复</em>
-					<span class="userName-beReplied">空耳君:</span>
-				</span>
-				<div class="commentOption">
-					<span class="optionItem reply">回复</span>
-					<!-- <span class="optionItem delete">删除</span> -->
-				</div>
-			</div>
-			<span class="commentText">咩咩</span>
-		</div>
-		<div class="commentLine">
-			<div class="commentHead clearfix">
-				<span class="userName">空耳君：</span>
-				<div class="commentOption">
-					<span class="optionItem reply">回复</span>
-					<!-- <span class="optionItem delete">删除</span> -->
-				</div>
-			</div>
-			<span class="commentText">大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗大神能帮我转一个吗</span>
-		</div>
-		<div class="commentLine">
-			<div class="commentHead clearfix">
-				<span class="userName">azalea:</span>
-				<div class="commentOption">
-					<span class="optionItem reply">回复</span>
-					<!-- <span class="optionItem delete hide">删除</span> -->
-				</div>
-			</div>
-			<span class="commentText">大神能帮我转一个吗</span>
-		</div>
-	</div>
-	<a href="javascript:;" class="viewMore">查看更多</a>
-</div><div class="post-workShow artWorkShow">
-	<div class="sectionHeader clearfix">
-		<img src="/images/user-portrait.png" alt="用户头像" class="userPortrait">
-		<span class="userName">咩咩咩remy</span>
-	</div>
-	<a href="/services/download/index" class="sectionContent">
-		<img src="/images/origin-work.png" alt="原图">
-	</a>
-	<div class="sectionFooter">
-		<a href="/services/download/index" class="workDesc">求大神p</a>
+		<a href="/services/download/index" class="workDesc"><%= replies.desc %></a>
 		<div class="footerBottom clearfix">
 			<span class="pubdate">
 				<span class="excDate">2016-3-14</span>
@@ -161,6 +105,8 @@
 	</div>
 	<a href="javascript:;" class="viewMore">查看更多</a>
 </div>
+
+<% }) %>
 
 <div class="post-footer clearfix">
 	<a href="javascript:;" class="footerHelp">
