--- a/public/services/src/app/views/ask/detail/ask-detail.less
+++ b/public/services/src/app/views/ask/detail/ask-detail.less
@@ -185,7 +185,7 @@
 				font-size: 0.93rem;
 				.userName-reply{
 					float: left;
-					width: 1.86rem;
+					/*width: 1.86rem;*/
 					white-space: nowrap;
 				}
 				em{
@@ -196,7 +196,7 @@
 				}
 				.userName-beReplied{
 					float: left;
-					width: 3.71rem;
+					/*width: 3.71rem;*/
 				}
 			}
 		}
