--- a/public/services/src/app/views/personal/header/header.html
+++ b/public/services/src/app/views/personal/header/header.html
@@ -8,7 +8,7 @@
 	</div>
 </div>
 <ul class="header-nav clearfix">
-	<li class="nav-item work"><a href="javascript:;">我的求P</a></li>
-	<li class="nav-item processing"><a href="javascript:;">进行中</a></li>
-	<li class="nav-item reply"><a href="javascript:;">我的作品</a></li>
+	<li class="nav-item" data-type="work"><a href="javascript:;">我的求P</a></li>
+	<li class="nav-item" data-type="processing"><a href="javascript:;">进行中</a></li>
+	<li class="nav-item" data-type="reply"><a href="javascript:;">我的作品</a></li>
 </ul>
